--- a/SignalRIleRealtimeUygulamaGelistirme/SignalRServerExample/SignalRServerExample/Properties/launchSettings.json
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalRServerExample/SignalRServerExample/Properties/launchSettings.json
@@ -13,7 +13,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7259;http://localhost:5054",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
