--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/SignalR.SampleProject.csproj
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/SignalR.SampleProject.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ClosedXML" Version="0.105.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
         <PrivateAssets>all</PrivateAssets>
@@ -18,6 +19,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\files\" />
     </ItemGroup>
 
 </Project>
